--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
    <body>
     <h1>Juan Carlos Lopez - Resume</h1>
-    <img src="./Me8.jpg"/>
+    <img src="./Me8.jpg" alt="Juan Carlos"/>
     <h2>SUMMARY</h2>
     <p>An experienced IT Professional looking to break into Web Development. I have 14 years’ experience on
     the Operations side. Mainly Desktop Support. I've also worked on service desks and data centers. </p>
@@ -17,19 +17,27 @@
        Graduated 1996<br/></p>
     
     <h2>Professional Experience</h2>
+        <p>Builders FirstSource | Helpdesk Technician | 10/23 – 03/24
+            <ul>
+                <li>Front-line technical support for internal employees (Tier I/II)</li>
+                <li>Helping with password resets</li>
+                <li>Used Active Directory and Exchange</li>
+                <li>Helped teammates with connectivity Issues</li>
+            </ul>
+        </p>
         <p>OmniTrax | Desktop Support | 02/23 – 08/23
             <ul>
                 <li>Assist in the repair, inventory tracking, 
                     management, and deployment of new systems</li>
-                    <li>Upgrade existing systems</li>
-                    <li>Daily administration and maintenance of computer devices</li>
-                    <li>Daily administration and maintenance of user accounts</li>
-                    <li>Deliver end-user support over the phone and desk side: install, configure and the ongoing usability of user desktop computer, peripheral equipment and software</li>
-                    <li>Available to work on rotating basis to support the 24X7 on-call of the production environment</li>
-                    <li>Monitor ticket system: triage incoming helpdesk tickets; work with IT staff as appropriate to determine and resolve reported problems from users</li>
-                    <li>Ability to work within small IT team where you get to do a lot of different things.</li>
-                    <li>Perform printer support: troubleshoot issues with printers, copiers and scanners.</li>
-                    <li>Create and update documentation for user/IT processes; document repeatable processes and procedures</li>
+                <li>Upgrade existing systems</li>
+                <li>Daily administration and maintenance of computer devices</li>
+                <li>Daily administration and maintenance of user accounts</li>
+                <li>Deliver end-user support over the phone and desk side: install, configure and the ongoing usability of user desktop computer, peripheral equipment and software</li>
+                <li>Available to work on rotating basis to support the 24X7 on-call of the production environment</li>
+                <li>Monitor ticket system: triage incoming helpdesk tickets; work with IT staff as appropriate to determine and resolve reported problems from users</li>
+                <li>Ability to work within small IT team where you get to do a lot of different things.</li>
+                <li>Perform printer support: troubleshoot issues with printers, copiers and scanners.</li>
+                <li>Create and update documentation for user/IT processes; document repeatable processes and procedures</li>
             </ul>
         </p>
 
