--- a/index.html
+++ b/index.html
@@ -64,5 +64,5 @@
     <h2>Other</h2>
         <p>Feel free to contact me for a full copy!</p>
         <a href="./contact.html">Contact Me</a>
-        <footer>© 2024 Juan Lopez  </footer>
+        <footer>© 2024 Juan C. Lopez  </footer>
    </body>
